<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/direction_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/departure_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/departure_radio_label"/>

        <RadioButton
            android:id="@+id/arrival_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arrival_radio_label"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date_label"
        android:layout_marginTop="16dp"/>

    <RelativeLayout
        android:id="@+id/select_date_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/selected_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:text="11.12.12"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/flight_label"/>

    <EditText
        android:id="@+id/number_flight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:hint="@string/number_flight"/>

    <CheckBox
        android:id="@+id/i_donot_know_flight_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_know_flight_number"/>

    <Button
        android:id="@+id/confirm_flight_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_gravity="end"
        android:textColor="@color/white"/>

</LinearLayout>